# lms_core

./: .dockerignore  .gitignore  Dockerfile  Readme  docker-compose.yaml  manage.py  pyproject.toml  pytest.ini  requirements.txt  root.graphql
account/: models.py  tests.py
account/migrations/: 0001_initial.py
account/resolvers/: account.py
account/schema/: account.graphql
base/: models.py
hospital/: admin.py  models.py  tests.py
hospital/migrations/: 0001_initial.py  0002_initial.py
hospital/resolvers/: hospital.py  laboratory_storage.py  patients.py  physicians.py  samples.py
hospital/schema/: hospital.graphql  laboratory_storage.graphql  patiens.graphql  physicians.graphql  samples.graphql
lms_core/: asgi.py  celery.py  settings.py  tasks.py  urls.py  utils.py  wsgi.py
order/: admin.py  models.py
order/migrations/: 0001_initial.py  0002_alter_order_hospital_alter_order_physician_and_more.py
order/resolvers/: orders.py
order/schema/: orders.graphql
schema/: schema.py
tests/: test_patients.py
